[package]
name = "psl-wasm"
description = "A library for parsing domain names"
version = "0.1.0"
license = "MIT/Apache-2.0"
repository = "https://github.com/addr-rs/psl-wasm"
readme = "README.md"
keywords = ["tld", "gtld", "cctld", "domain", "wasm"]
authors = ["rushmorem <rushmore@webenchanter.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
psl = "2.0.27"
wasm-bindgen = "0.2.74"
